--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "localforage": "^1.7.3",
+    "mongodb": "^2.2.33",
     "prop-types": "^15.7.2",
+    "pug": "^2.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
