--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.5.1",
     "localforage": "^1.7.3",
     "mongodb": "^2.2.33",
     "prop-types": "^15.7.2",
