--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^2.2.33",
     "prop-types": "^15.7.2",
     "pug": "^2.0.3",
+    "quill": "^1.3.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
